# the-round-table

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  providers.py
app/agents/: base.py  php_plugin.py  title.py
app/auth/: jwe.py  routes.py  schemas.py
app/conversations/: schemas.py
app/db/: session.py
app/exports/: pdf_report.py
app/models/: __init__.py
backend/: .dockerignore  Dockerfile
backend/app/: main.py  state.py
backend/app/agents/: ai_architect.py  documentation.py  fullstack.py  ml_scientist.py  moderator.py  php_theme.py  qa.py  ux_engineer.py  wp_plugin_reviewer.py  wp_theme_reviewer.py
backend/app/auth/: deps.py
backend/app/conversations/: routes.py  store.py
backend/app/models/: conversation.py  user.py
backend/app/orchestrator/: graph.py  router.py
backend/app/prompts/: personas.py
backend/migrations/: env.py
backend/migrations/versions/: 002_conversations.py
backend/ops/: migration.sh  onboard.py
docs/: c1-system-context.md  c2-containers.md  c3-components.md  c4-code.md  getting-started.md  personas.md
frontend/: .dockerignore  Design.md  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts  useBrainstorm.ts  useConversations.ts
frontend/src/lib/: apiFetch.ts  timeBuckets.ts
migrations/versions/: 001_users_pgcrypto_uuidv7.py
ops/: onboard.sh
refs/: README.md  implementation-plan.md  personas.md
(+13 files in other folders)
