[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jwcrypto>=1.5.7",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.47.0",
]
